# Conways-Game-of-Life

./: .gitignore  CMakeLists.txt
include/: Cell.h  Game.h  Grid.h  Renderer.h
src/: Cell.cpp  Game.cpp  Grid.cpp  Renderer.cpp  main.cpp
